--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "onlinemc",
+  "name": "onlinesex",
   "description": "Play Minecraft in any browser!",
   "repository": "https://github.com/radmanplays/radmanplays.github.io",
   "logo": "https://raw.githubusercontent.com/radmanplays/radmanplays.github.io/main/icon.png",
